--- a/src/html/sections/_speciality.html
+++ b/src/html/sections/_speciality.html
@@ -12,6 +12,6 @@
         <li class="speciality__item"><span class="_icon-check"></span> need to be sure there isn't anything embarrassing hidden in the middle of text.</li>
       </ul>
     </section>
-    <!-- <img src="@img/speciality/picture.png" alt="Picture" class="speciality__picture"> -->
+    <img src="@img/speciality/picture.png" alt="Picture" class="speciality__picture" data-watch-once data-watch data-watch-threshold="0.1">
   </div>
 </div>
